# poetry-python-benchmark

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: benchmark.yml
scripts/: combine_benchmark_results.py  plot_benchmark_results.py
