[tool.poetry]
name = "poetry-python3.13-benchmark"
version = "0.1.0"
description = ""
authors = ["Anes Benmerzoug <anes.benmerzoug@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
